# aoc-rs

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.devcontainer/gpg/: devcontainer-feature.json  install.sh
.github/: .devcontainer.json
.github/workflows/: devcontainer.yaml  lint.yml  tests.yml
aoc-macros/: Cargo.toml
aoc-macros/src/: lib.rs  units.rs
aoc-macros/src/derive_dynamic_solver/: expand_year.rs  mod.rs  options.rs
aoc-solver/: Cargo.toml
aoc-solver/src/: error.rs  lib.rs  main.rs  solver.rs
aoc-solver/src/cli/: mod.rs  model.rs
aoc-solver/src/cli/challenge_file/: from_str.rs  mod.rs  model.rs
aoc-traits/: Cargo.toml
aoc-traits/macros/: Cargo.toml
aoc-traits/macros/src/: derive_executor.rs  lib.rs  units.rs
aoc-traits/src/: challenge_result.rs  dynamic_solver.rs  error.rs  lib.rs  prelude.rs  solver.rs
aoc-traits/src/challenge/: mod.rs  model.rs
aoc-traits/src/challenge/identity/: error.rs  fragments.rs  from_str.rs  mod.rs  model.rs
aoc-traits/src/challenge/input/: from_file.rs  mod.rs  model.rs  name.rs
aoc-traits/src/challenge/solution/: flag.rs  mod.rs  model.rs
aoc-traits/src/dynamic_solver/: identity.rs  mod.rs  request.rs  solution.rs
aoc-traits/src/executor/: identity.rs  mod.rs  request.rs  solution.rs  variants.rs
aoc-traits/src/solver/: identity.rs  mod.rs  raw_input.rs  request.rs  solution.rs
aoc-traits/tests/: derive_dynamic_solver.rs  executor.rs
global/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs
year-2022/: Cargo.toml
year-2022/src/: lib.rs  main.rs
year-2022/src/assets/: day_07_cmd.pest  day_11_monkey.pest
year-2022/src/day_05_parsers/: stack_parser.rs
year-2022/src/day_07_parsers/: cmd_parser.rs  mod.rs
year-2022/src/days/: day_01.rs  day_02.rs  day_03.rs  day_05.rs  day_06.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_13.rs  day_14.rs  mod.rs
years/year-2022/: Cargo.toml
years/year-2022/src/: days.rs  lib.rs  solver.rs
years/year-2022/src/assets/: day_05_procedure.pest  day_05_stacks.pest  day_13_packets.pest
years/year-2022/src/day_05_parsers/: mod.rs  procedure_parser.rs
years/year-2022/src/day_07_parsers/: cmd_parser.rs
years/year-2022/src/day_11_parser/: mod.rs  monkey_parser.rs
years/year-2022/src/day_13_parser/: mod.rs  pair_parser.rs
years/year-2022/src/days/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_12.rs  mod.rs
years/year-2022/src/days/day_01/: input.rs  mod.rs  part_01.rs  part_02.rs
years/year-2022/src/days/day_01/tests/: mod.rs
years/year-2022/src/days/day_02/: mod.rs  models.rs  part_01.rs  part_02.rs  tests.rs
years/year-2022/src/days/day_02/models/: game.rs  move_enum.rs  opponent_decision.rs  player_decision.rs  round.rs  round_decision.rs  score.rs
years/year-2022/src/days/day_03/: group.rs  models.rs  part_01.rs  part_02.rs  tests.rs
years/year-2022/src/days/day_03/group/: rucksack.rs
years/year-2022/src/days/day_03/group/rucksack/: compartment.rs  intersectable.rs  item.rs
years/year-2022/src/days/day_03/models/: rucksack.rs
years/year-2022/src/days/day_04/: camp.rs  part_01.rs  part_02.rs  tests.rs
years/year-2022/src/days/day_05/: cargo.rs  models.rs  part_01.rs  part_02.rs  tests.rs
years/year-2022/src/days/day_05/models/: cargo.rs  instruction.rs  procedure.rs
