[workspace]
members = ["global", "utils", "year-2022"]
resolver = "2"

[workspace.lints]
clippy = { all = "deny" }
rust = { unsafe_code = "forbid" }

[workspace.package]
description = "Advent of Code proposition of solutions with Rust language."
authors = ["Swelio <swelio.github@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["education", "advent-of-code"]
repository = "https://github.com/Swelio/aoc-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.0.29", features = ["default", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
nom = "7.1.1"
pest = "2.5.1"
pest_derive = "2.5.1"
petgraph = "0.6.2"
utils = { path = './utils' }
