[workspace]
members = ["aoc-macros", "aoc-traits", "year-2022"]
resolver = "2"

[workspace.lints]
clippy = { all = "deny" }
rust = { unsafe_code = "forbid" }

[workspace.package]
description = "Advent of Code proposition of solutions with Rust language."
authors = ["Swelio <swelio.github@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["education", "advent-of-code"]
repository = "https://github.com/Swelio/aoc-rs.git"

[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
aoc-macros = { path = "aoc-macros" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aoc-macros = "*"
nutype = "0.5.0"
