[workspace]
members = ["aoc-macros", "aoc-solver", "aoc-traits", "years/*"]
resolver = "2"

[workspace.lints]
clippy = { all = "deny" }
rust = { unsafe_code = "forbid" }

[workspace.package]
description = "Advent of Code proposition of solutions with Rust language."
authors = ["Swelio <swelio.github@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["education", "advent-of-code"]
repository = "https://github.com/Swelio/aoc-rs.git"
categories = ["advent-of-code"]

[profile.dev.build-override]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[patch.crates-io]
aoc-macros = { path = "aoc-macros" }
aoc-traits = { path = "aoc-traits" }

[workspace.dependencies]
aoc-macros = "*"
aoc-traits = "*"
nutype = "0.5.0"
thiserror = "1.0"
winnow = "0.6.20"
