[package]
name = "aoc-solver"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
aoc-traits.workspace = true
clap = { version = "4.5.19", features = ["derive"] }

[lints]
workspace = true
