[package]
name = "aoc-traits"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
macros = { path = "./macros" }
nutype = { version = "0.5.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
