[package]
name = "aoc-traits"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aoc-macros.workspace = true
nutype = { workspace = true, features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
