[package]
name = "year-2022"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
log.workspace = true
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true