[package]
name = "year-2022"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
async-trait = "0.1.82"
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
clap = { version = "4.5.18", features = ["derive", "env", "wrap_help"] }
flume = "0.11.0"
futures = "0.3.30"
lazy_static = "1.5.0"
linkme = "0.3.28"
nutype = { version = "0.5.0", features = ["serde"] }
petgraph = "0.6.5"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = [
    "json",
    "gzip",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
    "tracing-log",
] }
uuid = "1.10.0"
winnow = "0.6.18"
